# website

./: .env  .gitignore  Cargo.toml  logfile  shell.nix
.db/postgres/: current_logfiles  logfile  postgresql.conf  postmaster.opts  postmaster.pid
.db/postgres/base/1/: 1247_vm  1249  1249_vm  14593_vm  2603_vm  2605_vm  2606  2608_vm  2658  2692  2696  2703  2838_vm  2839  2840  3080  3081  3541_vm  3600_vm
.db/postgres/base/14774/: 1247  1259  14598_vm  14603  14607  14612  2606_vm  2609_vm  2610  (+12 more)
.db/postgres/global/: 1213_vm  1214  1214_vm  1232  1233  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  pg_control  pg_internal.init
.db/postgres/pg_stat/: db_0.stat  db_14775.stat  global.stat
.db/postgres/pg_stat_tmp/: db_0.stat  db_14775.stat  db_16386.stat  global.stat
.db/postgres/pg_subtrans/: 0000
.tmp/mydb/: postgresql.conf
.tmp/mydb/global/: 1214  1214_vm  1260  1262  2671  2672  2676  pg_control
migrations/2023-03-31-173252_meows/: up.sql
migrations/2023-04-07-155340_bigger_ints_for_meows/: down.sql  up.sql
migrations/2023-04-07-165309_number_not_null/: down.sql  up.sql
result/: index.html
result/blog/: index.html
src/: blinkies.rs  config.rs  feed.rs  files.rs  home.rs  main.rs  markdown.rs  models.rs  page.rs  robots.rs  schema.rs  style.rs  tags.rs
src/assets/: mod.rs
src/blog/: building_rust_code_for_atmega32u4.md  kaokao.md  mod.rs  rewriting_my_website.md
src/components/: footer.rs  linkbox.rs  meow.rs  mod.rs  table.rs  tag.rs
src/css/: aboutme.scss  colors.scss  font.scss  glow.scss  grow.scss  index.scss  linkbox.scss  meowbutton.scss  tag.scss  vars.scss
src/db/: mod.rs
src/font/: mod.rs
src/home/: aboutme.md  me.toml  mod.rs
src/robots/: mod.rs
src/sitemap/: mod.rs
src/verification/: mod.rs
(+93 files in other folders)
