[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
maud = { version = "0.24", features = [] }
grass = { version = "0.12", features = ["include_sass", "macro"] }
rocket = { version = "0.5.0-rc.3", features = [] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
atom_syndication = "0.12"
chrono = "0.4"
