[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24", features = ["derive"] }
maud = { version = "0.25", features = [] }
grass = { version = "0.12", features = ["include_sass", "macro"] }
rocket = { version = "0.5.0-rc.3", features = [] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
atom_syndication = "0.12"
chrono = "0.4"
serde_derive = "1"
confy = "0.5"
lazy_static = "1.4"
serde = "1"
pulldown-cmark = { version = "0.9", default-features = false }
ammonia = "3"
itertools = "0.10"
cached = "0.43"
rand = "0.8"
sitewriter = "1"